processed/jira/txt/LU/LU-13060.txt
Key:        LU-13060
Summary:    error: ‘ldiskfs_iget’ undeclared here (not in a function)
Link:       https://jira.whamcloud.com/browse/LU-13060
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Duplicate
Assignee:   Yang Sheng
Reporter:   Jian Yu
Created:    Tue, 10 Dec 2019 10:13:32 +0000
Updated:    Wed, 17 Feb 2021 22:19:56 +0000
Resolved:   Thu, 12 Dec 2019 23:34:22 +0000
Links:      Blocker: is blocking LU-12637

--- Environment ---
Distro/Arch: RHEL8.1/x86_64

--- Description ---
While building Lustre server on RHEL 8.1 with kernel 4.18.0-147.0.3.el8_1, the build failed as follows:

make[3]: Entering directory '/root/kernel/rpmbuild/BUILD/kernel-4.18.0-147.0.3.el8_1/linux-4.18.0-147.0.3.el8_lustre.x86_64'
  CC [M]  /root/lustre-release/ldiskfs/inode.o
In file included from include/linux/linkage.h:7,
                 from include/linux/fs.h:6,
                 from /root/lustre-release/ldiskfs/inode.c:22:
/root/lustre-release/ldiskfs/inode.c:6294:15: error: ‘ldiskfs_iget’ undeclared here (not in a function); did you mean ‘ldiskfs_ioctl’?
 EXPORT_SYMBOL(ldiskfs_iget);
               ^~~~~~~~~~~~
include/linux/export.h:59:16: note: in definition of macro ‘___EXPORT_SYMBOL’
  extern typeof(sym) sym;      \
                ^~~
/root/lustre-release/ldiskfs/inode.c:6294:1: note: in expansion of macro ‘EXPORT_SYMBOL’
 EXPORT_SYMBOL(ldiskfs_iget);
 ^~~~~~~~~~~~~
make[5]: *** [scripts/Makefile.build:313: /root/lustre-release/ldiskfs/inode.o] Error 1

In kernel 4.18.0-147.0.3.el8_1:

struct inode *__ext4_iget(struct super_block *sb, unsigned long ino,
                          ext4_iget_flags flags, const char *function,
                          unsigned int line);

In previous kernel versions:

struct inode *ext4_iget(struct super_block *sb, unsigned long ino);

--- Comment (yujian, Thu, 12 Dec 2019 23:34:22 +0000) ---
It works. Thank you, Yang Sheng.

RHEL 8.1 server build passed on my local build node. I updated patch https://review.whamcloud.com/36968.

--- Comment (ys, Wed, 11 Dec 2019 16:38:20 +0000) ---
Hi, Yujian,

To fix my previous comment, I think we still need export the __ext4_iget for osd. 

Thanks,

Yangsheng

--- Comment (yujian, Wed, 11 Dec 2019 04:44:36 +0000) ---
Sure, Yang Sheng. I'll try that.

--- Comment (ys, Wed, 11 Dec 2019 04:27:50 +0000) ---
Hi, Yujian,

Could you please remove the EXPORT_SYMBOL(ext4_iget) line from ext4_misc.patch? Also please change ext4-large-eas.patch for ext4_iget to adopt 3 args as:

        ea_inode = ext4_iget(parent->i_sb, ea_ino, EXT4_IGET_NORMAL);

Thanks,

YangSheng

--- Comment (pjones, Tue, 10 Dec 2019 19:22:11 +0000) ---
Yang Sheng

What do you advise here?

Peter
